# manticore-runtime

./: .gitignore  CMakeLists.txt  xrt.ini
cmake/: FindXRT.cmake
extlibs/: CMakeLists.txt
extlibs/tinyformat/: tinyformat.h
include/: config.h  logger.h  manticore-manager.h  manticore-registers.h  string-format.h
src/: config.cpp  logger.cpp  main.cpp  manticore-manager.cpp  string-format.cpp
test/: CMakeLists.txt  create_test.cmake  emconfig.json  xrt_gui.ini
test/cache_stress/: CMakeLists.txt  compile.sh  fifo.v  fifo_extra_large.v  fifo_large.v  fifo_small.v  random_access.v  random_access_extra_large.v  random_access_large.v  random_access_small.v
test/printing/: CMakeLists.txt
test/reference/: even_odd.txt  hello_manticore.txt  sum.txt
test/verilog/: even_odd.v  fifo.v  hello_manticore.v  random_access.v  sum.v
